--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
     "motion": "^12.34.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
